assets/css/cultura-napoli-custom-style.css
/* ... */
@media (min-width: 992px) {
  .it-header-navbar-wrapper {
    background: var(--bs-primary);
  }
}

.it-header-wrapper .it-brand-wrapper .icon image {
    width: auto;
    height: 48px
}

@media(min-width: 992px) {
    .it-header-wrapper .it-brand-wrapper .icon image {
        width:auto;
        height: 3.2rem;
    }
}
.it-header-center-wrapper .it-header-center-content-wrapper .it-brand-wrapper a .icon {
    width: auto;
    height: 48px;
    margin-right: 8px;
}
.it-header-center-wrapper .it-header-center-content-wrapper .it-brand-wrapper a .icon {
    width: auto;
    height: 3.2rem;
    margin-right: 16px
}



/* Breadcrumbs */
.cmp-breadcrumbs .breadcrumb-container .breadcrumb .breadcrumb-item a {
    color: var(--bs-primary);
}

.cmp-breadcrumbs .breadcrumb-container .breadcrumb .breadcrumb-item a:hover {
    color: var(--bs-link-hover-color);
}

.cmp-breadcrumbs .separator {
    color: #455a64;
    font-weight: 400
}

.cmp-breadcrumbs .breadcrumb-container .breadcrumb .breadcrumb-item.active {
    color: #30475f
}


/*
/* Evento
*/
.single-evento .it-page-section:not(:first-of-type) { border-top: 1px solid #c5c7c9; padding-top: 2rem; }
.single-evento #luogo .card .card-title .icon { width: 1em; height: 1em; fill:var(--bs-primary); stroke:var(--bs-primary); stroke-width: .1em; margin-top: -0.2em; }
.single-evento #luogo .card .card-body { padding-top: 1em; padding-left: 0; padding-right: 0; }
.single-evento #luogo .card .card-body .card-title.h5,
.single-evento #luogo .card .card-body h5.card-title { margin-bottom: 0; }
.single-evento #luogo .card::after { margin-top: 0; }

.parent-event { border-top: 1px solid rgba(var(--cn-giallo-rgb),.3)!important }
.more-events { border-top: 1px solid rgba(var(--cn-giallo-rgb),.3)!important }



/*
/* Luogo
*/
.single-luogo .it-page-section:not(:first-of-type) { border-top: 1px solid #c5c7c9; padding-top: 2rem; }



/*
/* Itinerario
*/
.single-itinerario .it-page-section:not(:first-of-type) { border-top: 1px solid #c5c7c9; padding-top: 2rem; }

.tappa-wrapper { position: relative; padding-left: 3rem; }
.tappa-wrapper:before { content: ""; position: absolute; top: 0; bottom:0; left:1.3rem; width: 1px; background: var(--cn-giallo); }
.tappa-wrapper:after { content: ""; position: absolute; top: 4.3rem; left:calc(.6rem - 1px); width: 1.6rem; height: 1.6rem; border-radius: 50%; background: var(--bs-white); border:1px solid var(--cn-giallo); }

.card-tappa .card-body .h5.card-title { line-height: 1.25rem; margin-bottom: .2em; }
.card-tappa .card-body .card-text { color: var(--bs-secondary); line-height: 1.2em; }
.card-tappa .card-body .card-text .card-address { display: block; margin-bottom: .7em; color: var(--bs-secondary); line-height: 1.2em; }



/*
/* Splide
*/
.it-carousel-same-height .it-single-slide-wrapper { height: 100%; }
.it-carousel-same-height figure { height: 100%; }
.it-carousel-same-height figure img { height: 100%; width: auto; border-radius: .5rem; }


.slider_home .splide__pagination {
  gap: .75rem;
  justify-content: flex-start;
  padding: 0 calc(var(--bs-gutter-x)*.5) 2rem;
}
.slider_home .splide__pagination__page {
    background: var(--bs-secondary);
    width: 2rem;
    height: .1rem;
}
.it-carousel-wrapper .splide__pagination button { background: rgba(var(--cn-giallo-rgb), .5); }
.it-carousel-wrapper .splide__pagination button.is-active { background: var(--bs-black); }

.slider_home .splide__pagination__page.is-active {
    background: var(--bs-primary);
    height: .15rem;
}

#home-itinerari { overflow-x: hidden; }
.slider_itinerari .splide__track { overflow: visible; }
.slider_itinerari .splide__slide { transition: all .200ms ease; }
.slider_itinerari .splide__slide:not(.is-visible) { opacity: .4; }

.slider_itinerari .splide__pagination { display: block; margin-top: 1em; }
.slider_itinerari .splide__pagination__page { width: 2em; height: .2em; background-color: rgba(var(--bs-black-rgb),.4); margin: 0 .5em 0 0; }
.slider_itinerari .splide__pagination__page .is-active { background-color: var(--bs-primary) }

.slider_bandi { position: relative; }
.slider_bandi .splide__track { overflow: visible; }
.slider_bandi .splide__pagination { display: flex; justify-content: flex-start; margin-top: 1em; }
.slider_bandi .splide__pagination__page { width: 1.5em; height: .2em; background-color: rgba(var(--bs-black-rgb),.3); margin-right: .5em; }
.slider_bandi .splide__pagination__page.is-active { background-color: rgb(158, 131, 81); }
.slider_bandi .splide__arrows { display: flex; justify-content: flex-end; gap: .5rem; }
.slider_bandi_arrows_placeholder { display: flex; justify-content: flex-end; }
.slider_bandi_arrows_placeholder .splide__arrow { background: transparent; }
.slider_bandi_arrows_placeholder .splide__arrow { margin-left: .5rem; }
.slider_bandi_arrows_placeholder .splide__arrow .icon { width: 1.5rem; height: 1.5rem; fill: var(--bs-secondary); }
.slider_bandi .splide__arrow:disabled { opacity: .4; }

.area-tematica { border-bottom: 1px solid var(--bs-secondary); }

.bando-icon {
  display: inline-flex;
  align-items: center;
  justify-content: center;
  width: 3rem;
  height: 3rem;
  border: 1px solid rgb(158, 131, 81);
  border-radius: .25rem;
  margin-left: .5rem;
}
.bando-icon .icon {
  width: 1.2rem;
  height: 1.2rem;
  fill: rgb(158, 131, 81);
}

